2018-06-24  Sam Steingold  <sds@gnu.org>

	* modules/gdbm/gdbm.c (check_gdbm_errno): Update to gdbm 1.15.

2018-04-23  Sam Steingold  <sds@gnu.org>

	* makemake.in (MYIMPROOT): Set to gnu.org to work around the lack
	of HTTPS support in CLISP.

2018-04-23  Bruno Haible  <bruno@clisp.org>

	Update URLs.
	* makemake.in (cygwin.README): Update URL to libsigsegv home page.

2018-04-22  Bruno Haible  <bruno@clisp.org>

	Add support for Linux/riscv64.
	* m4/mmap.m4 (CL_MMAP): Avoid crash on Linux/riscv64.
	* aclocal.m4, src/configure: Regenerated.
	* lispbibl.d (RISCV64): New macro.
	(C_CODE_ALIGNMENT, intDsize, MAPPABLE_ADDRESS_RANGE_*, SP_register,
	ASM_get_SP_register, SP_DOWN): Define for Linux/riscv64.
	* Makefile.devel (multibuild-linux-riscv64): New target.
	* makemake.in (XCFLAGS): For Linux/riscv64, enable all optimizations
	except ASM.
	Reduce optimization when compiling hashtabl.c.

2018-04-22  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported \
	&& make -f Makefile.devel build-prerequisites".
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.
	* modules/*/configure, modules/*/config.h.in: Regenerated.

2018-04-22  Bruno Haible  <bruno@clisp.org>

	Switch to automake 1.16.1.
	* Makefile.devel (AUTOMAKE_VERSION): Set to 1.16.1.
	* build-aux/*: Updated.
	* m4/gtk-*.m4: Updated.

2018-04-22  Bruno Haible  <bruno@clisp.org>

	More hg to git changes.
	* Makefile.devel (EXCLUDE): Exclude .git, not .hg.
	* src/configure.in: Remove AC_REVISION invocation.
	* src/makemake.in (check-doc): Test for .git, not .hg.
	* utils/modprep.lisp: Update comment.

2018-04-22  Bruno Haible  <bruno@clisp.org>

	Assume a git checkout instead of a hg checkout.
	* Makefile.devel (GIT): New variable.
	(HG): Remove variable.
	(gnulib-imported, tag-release): Use GIT instead of HG.

2018-04-08  Bruno Haible  <bruno@clisp.org>
